# goblin-core-v1

./: .gitignore  .gitmodules  Cargo.toml  PROMPT.md  README.md  flake.nix  goblin_market_bytes  rust-toolchain.toml
crates/compile-contract/: Cargo.toml
crates/compile-contract/src/: main.rs
crates/fairy-market/: Cargo.toml
crates/fairy-market/src/: error.rs  instruction.rs  quantities.rs
crates/fairy-market/src/state/: enums.rs
crates/fairy-market/src/state/iterable_tick_map/: bitmap.rs  resting_order.rs  tick_indices.rs
crates/fairy-market/src/state/markets/: market_traits.rs
crates/goblin-core/: Cargo.toml
crates/goblin-core/.cargo/: config.toml
crates/goblin-core/src/: erc20.rs  hostio.rs  lib.rs  market_params.rs  selector.rs
crates/goblin-core/src/getter/: get_10_trader_token_state.rs
crates/goblin-core/src/handler/: handle_0_credit_eth.rs  handle_1_credit_erc20.rs  handle_deposit_funds.rs  handle_get_count.rs  handle_set_count.rs  mod.rs
crates/goblin-core/src/quantities/: atoms.rs  lots.rs  macros.rs  mod.rs
crates/goblin-core/src/state/: slot_key.rs
crates/goblin-core/src/state/slot/: mod.rs  trader_state.rs  trader_token_state.rs
crates/goblin-factory/: Cargo.toml
crates/goblin-factory/examples/: activate.rs
crates/goblin-factory/src/: create3.rs  deployment_tx_data  goblin_market.wasm  lib.rs  main.rs
crates/goblin-indexer/: Cargo.toml
crates/goblin-indexer/src/: constants.rs  main.rs
crates/goblin-market/: Cargo.toml
crates/goblin-market/src/: error.rs  instruction.rs  lib.rs  main.rs  parameters.rs  quantities.rs  token_utils.rs
crates/goblin-market/src/processor/: deposit.rs  fees.rs  mod.rs  withdraw.rs
crates/goblin-market/src/program/: error.rs  mod.rs  token_utils.rs
crates/goblin-market/src/program/processor/: cancel_multiple_orders.rs  deposit.rs  fees.rs  mod.rs  new_order.rs  reduce_multiple_orders.rs  reduce_order.rs  withdraw.rs
crates/goblin-market/src/program/types/: matching_engine_response.rs  mod.rs  order_packet.rs
crates/goblin-market/src/state/: bitmap_group.rs  constants.rs  context.rs  enums.rs  fees.rs  index_list.rs  inflight_order.rs  market_state.rs  market_state_v2.rs  matching_engine.rs  mod.rs  order_packet.rs  resting_order.rs  slot_storage.rs  test_utils.rs  tick_indices.rs  trader_state.rs
crates/goblin-market/src/validation/: checkers.rs
crates/grind-create3-seed/: Cargo.toml
crates/grind-create3-seed/src/: main.rs
examples/: compile-contract.rs
migrations/: 20250302090609_setup-db.sql
prompts/: 2-write-prepared-indices-tests.md  3-index-list-remover.md  4-2-bitmap-remover-tests.md  4-BITMAP-REMOVER.md  5-1-index-list-remover.md  5-2-index-list-remover-tests.md  6-1-bitmap-group-iterator.md  7-commitable-trait.md
rpc-responses/: batched-calls.jsonc  callTracer_debug_traceBlockByNumber.jsonc  custom-js-tracer.jsonc  eth_getBlockByNumber.jsonc  flatCallTracer.jsonc  stylusTracer_debug_traceBlockByNumber.jsonc
rpc-responses/handler-calls/: 00-credit-eth.jsonc  01-credit-erc20.jsonc
scripts/: 0-run-node.sh  1-deploy-localnet.sh  2-approve.sh  2-deposit-erc20.sh  2-deposit-eth.sh  3-read-erc20-balance.sh  3-read-states.sh  4-check-allowance.sh  4-rpc-trace.sh  call-trace-for-block-12.json  call-trace.json  stylus-trace-for-block-12.json  stylus-trace.json
src/: erc20.rs  error.rs  hostio.rs  instruction.rs  lib.rs  market_params.rs  quantities.rs
src/getter/: get_10_trader_token_state.rs  mod.rs
src/handler/: handle_1_credit_erc20.rs  mod.rs
src/quantities/: atoms.rs  lots.rs  mod.rs  quantities.rs
src/state/: enums.rs  mod.rs  slot_key.rs  slot_storage.rs  storage.rs
src/state/iterable_tick_map/: bitmap.rs  bitmap_list.rs  constants.rs  index_list.rs  iterable_tick_map.rs  mod.rs  resting_order.rs  tick_indices.rs
src/state/market/: market_traits.rs  mod.rs
src/state/markets/: fifo.rs  market_traits.rs  mod.rs
src/state/pesudo_tree/: README.md  mod.rs  pseudo_tree.rs  resting_order.rs  tick_array.rs  tick_group.rs  tick_group_list.rs
src/state/slot/: mod.rs
src/types/: address.rs
tx_data/: deployment_tx_data  output.txt
(+154 files in other folders)
