[package]
name = "fairy-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.4.3", features = ["hostio", "debug"] }
mini-alloc = "0.4.2"
borsh = { version = "1.3.1", features = ["derive"] }
bytemuck = { version = "1.14.3", features = ["derive"] }
#thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
#num_enum = "0.7.2"
alloy-sol-types = "0.3.1"

#bytemuck = "1.14.3"

[features]
export-abi = ["stylus-sdk/export-abi"]
#debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
