[workspace]

resolver = "2"

members = [
    "crates/goblin-market",
    "crates/goblin-factory",
    "crates/goblin-core", "crates/grind-create3-seed", "crates/compile-contract", "crates/goblin-indexer",
]

# This must be at the root level otherwise binaries will bloat
[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
