[package]
name = "goblin-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mini-alloc = "0.7.0"

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex-literal = "0.4.1"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"

[features]
default = []
