[package]
name = "goblin-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.4.3", features = ["hostio", "debug"] }
mini-alloc = "0.4.2"
borsh = { version = "1.3.1", features = ["derive"] }
bytemuck = { version = "1.14.3", features = ["derive"] }

# important- lock to this version
alloy-sol-types = "0.3.1"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]
