[package]
name = "goblin-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.4.3", default-features = false, features = ["hostio", "debug"] }
mini-alloc = "0.4.2"
borsh = { version = "1.3.1", features = ["derive"] }
bytemuck = { version = "1.14.3", features = ["derive"] }

# important- lock to this version
alloy-sol-types = "0.3.1"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
hex = "0.4.3"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]
